--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
           <div class="col text-start">
             <p class="mb-0">I am an international student from Hong Kong, pursuing a master's degree
               from <a href="https://cob.unt.edu/ms-buan">G. Brint Ryan College of Business</a>, <a href="https://www.unt.edu/">University of North Texas</a>.
-              Before a new journey at UNT, I have worked as an analyst in global corporations for almost 3 years,
-              which taught me to be a responsible and meticulous person with good communication and coordination skills.
-              Besides the study and work life, I am also keen on basketball, photography, and workout.
+              As an analyst before, I gained experience in the data analysis field and have a passion for making impacts on real business.
+              By diving deep into the master program, I have been equipped the proven skills in Machine Learning, NLP, and Database fields.
+              Most importantly, I am a life learner who is eager to develop new skills through the challenges at work.
 
               </p>
           </div><!--//col-->
