--- a/index.html
+++ b/index.html
@@ -97,10 +97,31 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Amazon Review NLP Project
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    Spring 2022
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Cleaned data by removing URLs, emojis, non-ascii characters using regular expression</li>
+                    <li>Extracted linguistic features based on tokenization, POS tagging, and parsing sentence via spaCy</li>
+                    <li>Tuned parameters via 5-fold cross-validation. SMOTE was used to do down sampling and up sampling</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
                     Personal Loan Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    Nov 2021
+                    Fall 2021
                   </div>
                 </div>
 
@@ -126,9 +147,9 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Enhanced more than 5% model accuracy by removing the outliers based on the boxplot via Matplotlib</li>
-                    <li>Combined similar types of features that optimize the model accuracy higher 2.7%</li>
-                    <li>Ranked Top 5% in the leaderboard with the designed GradientBoosting Regressor model in Python</li>
+                    <li>Gained 5% improvement in accuracy by removing the outliers based on the boxplot via Matplotlib</li>
+                    <li>Merged similar features for adjusting the skewed distribution that achieve 2.7% improvement in performance</li>
+                    <li>Ranked Top 5% in the leaderboard with the tuned gradient boosting model</li>
                   </ul>
                 </div>
 
@@ -230,12 +251,12 @@
               <h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
               <ul class="list-unstyled resume-education-list">
                 <li class="mb-3">
-                  <div class="resume-degree font-weight-bold">M.S. in Business Analytics</div>
+                  <h3 class="item-title">M.S. in Business Analytics</h3>
                   <div class="resume-degree-org text-muted">University of North Texas</div>
                   <div class="resume-degree-time text-muted">2020 - Present</div>
                 </li>
                 <li class="mb-3">
-                  <div class="resume-degree font-weight-bold">Bachelor of Business Administration in Finance</div>
+                  <h3 class="item-title">Bachelor of Business Administration in Finance</h3>
                   <div class="resume-degree-org text-muted">Chu Hai College of Higer Education</div>
                   <div class="resume-degree-time text-muted">2016</div>
                 </li>
