--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Housing Price Prediction ---
-                      examined 80 factors that influence house prices and selected the best model based on ASE in 5 predictive model comparisons.</li>
+                    <li>Abstracted new key features like household incomes from digging zip code using uszipcode</li>
+                    <li>Eliminated one highly correlated feature and some outliers through a well-developed EDA</li>
+                    <li>Obtained 0.96 at Marco f1-score by the designed random forest model</li>
                   </ul>
                 </div>
 
@@ -189,13 +190,17 @@
                   <ul class="resume-list">
                     <li>Drew database diagrams in MySQL to show the relationship between seller side and buyer side,
                       including the connection from users-sales-products-reviews</li>
+                    <br></br>
                   </ul>
                 </div>
 
               </div>
 
+
               <!-- Header of Working experience -->
+
               <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
+
 
               <!-- Working experience -->
               <div class="item mb-3">
