--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <section class="work-section py-3">
 
               <!-- Projects -->
-              <h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
+              <h3 class="text-uppercase resume-section-heading mb-4">Project Experience</h3>
 
               <div class="item mb-3">
 
@@ -108,7 +108,7 @@
                   <ul class="resume-list">
                     <li>Cleaned data by removing URLs, emojis, non-ascii characters using regular expression</li>
                     <li>Extracted linguistic features based on tokenization, POS tagging, and parsing sentence via spaCy</li>
-                    <li>Tuned parameters via 5-fold cross-validation. SMOTE was used to do down sampling and up sampling</li>
+                    <li>Tuned parameters via 5-fold cross-validation, SMOTE was used to do down sampling and up sampling</li>
                   </ul>
                 </div>
 
@@ -199,7 +199,7 @@
 
               <!-- Header of Working experience -->
 
-              <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
+              <h3 class="text-uppercase resume-section-heading mb-4">Work Experience</h3>
 
 
               <!-- Working experience -->
