--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    ChatBot for University Related FAQs Project
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    Spring 2022
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Scraped FAQs from the university websites and set pre-defined Q&A in the ChatBot using AIML</li>
+                    <li>Extracted semantic attributes based on tokenization, name entity, and word2vec via spaCy</li>
+                    <li>Applied LSTM instead of LDA to higher than 0.70 at F-1 score in predicting answers of the ChatBot</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
                     Personal Loan Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
