--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
                 <h4 class="item-title">Tools</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">scikit-learn / Pandas / spaCy</li>
-                  <li class="mb-2">GitHub/ PyCharm</li>
+                  <li class="mb-2">Linux / Beautiful Soup </li>
+                  <li class="mb-2">GitHub/ PyCharm / PyTorch</li>
                 </ul>
               </div><!--//item-->
             </section>
