--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Amazon Review NLP Project
+                    Amazon Review Classification
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     Spring 2022
@@ -118,7 +118,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    ChatBot for University Related FAQs Project
+                    University Information Retrieval Chatbot
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     Spring 2022
@@ -127,9 +127,9 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Scraped FAQs from the university websites and set pre-defined Q&A in the ChatBot using AIML</li>
-                    <li>Extracted semantic attributes based on tokenization, name entity, and word2vec via spaCy</li>
-                    <li>Applied LSTM instead of LDA to higher than 0.70 at F-1 score in predicting answers of the ChatBot</li>
+                    <li>Scraped FAQs on the university websites with BeautifulSoup</li>
+                    <li>Cleaned and parsed conversations using NLTK and spaCy</li>
+                    <li>Extracted textual feature via GloVe word embedding and Seq2Seq LSTM using TensorFlow</li>
                   </ul>
                 </div>
 
@@ -139,7 +139,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Personal Loan Project
+                    Personal Loan Acceptance Classification
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     Fall 2021
@@ -148,9 +148,9 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Abstracted new key features like household incomes from digging zip code using uszipcode</li>
+                    <li>Feature engineered on household income zipcode using uszipcode </li>
                     <li>Eliminated one highly correlated feature and some outliers through a well-developed EDA</li>
-                    <li>Obtained 0.96 at Marco f1-score by the designed random forest model</li>
+                    <li>Obtained 0.96 at macro F1-score by the designed random forest model</li>
                   </ul>
                 </div>
 
@@ -160,7 +160,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Housing Prices Competition in Kaggle
+                    Housing Prices Competition
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     Summer 2021
@@ -170,7 +170,7 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Gained 5% improvement in accuracy by removing the outliers based on the boxplot via Matplotlib</li>
-                    <li>Merged similar features for adjusting the skewed distribution that achieve 2.7% improvement in performance</li>
+                    <li>Merged similar features for adjusting the skewed distribution that achieved 2.7% improvement in performance</li>
                     <li>Ranked Top 5% in the leaderboard with the tuned gradient boosting model</li>
                   </ul>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Built automatic programs via VBA to deal with 10 daily reports and parts of weekly reports,
-                      saving 19% working time, therefore, I was assigned to help the payroll team in managing payroll issuance every day</li>
+                      saving 19% working time. Therefore, I was assigned to help the payroll team in managing payroll issuance every day</li>
                   </ul>
                 </div>
 
@@ -329,7 +329,7 @@
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">scikit-learn / Pandas / spaCy</li>
                   <li class="mb-2">Linux / Beautiful Soup </li>
-                  <li class="mb-2">GitHub/ PyCharm / PyTorch</li>
+                  <li class="mb-2">GitHub/ PyCharm / TensorFlow</li>
                 </ul>
               </div><!--//item-->
             </section>
