--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="mb-0">I am an international student from Hong Kong, pursuing a master's degree
               from <a href="https://cob.unt.edu/ms-buan">G. Brint Ryan College of Business</a>, <a href="https://www.unt.edu/">University of North Texas</a>.
               As an analyst before, I gained experience in the data analysis field and have a passion for making impacts on real business.
-              By diving deep into the master program, I have been equipped the proven skills in Machine Learning, NLP, and Database fields.
+              By diving deep into the master program, I have been equipped the proven skills in machine learning, NLP, and database fields.
               Most importantly, I am a life learner who is eager to develop new skills through the challenges at work.
 
               </p>
@@ -97,18 +97,20 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Amazon Review Classification
+                    Stock2Vec Research Project (<a href="assets/images/poster.pdf">Poster</a>)
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    Spring 2022
+                    Summer 2022
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Cleaned data by removing URLs, emojis, non-ascii characters using regular expression</li>
-                    <li>Extracted linguistic features based on tokenization, POS tagging, and parsing sentence via spaCy</li>
-                    <li>Tuned parameters via 5-fold cross-validation, SMOTE was used to do down sampling and up sampling</li>
+                    <li>Based on the framework of the previous Stock2Vec paper, built a fine-tuned stock embedding via Word2Vec and FastText model
+                      that can optimize predictions of companies’ characteristics</li>
+                    <li>In the same prediction task of the previous paper, the fine-tuned models achieved at least a 10% improvement in performance</li>
+                    <li>The fine-tuned models can also adapt to general tasks, especially in predicting the market capitalization of the companies,
+                      leading to at most a 50% improvement</li>
                   </ul>
                 </div>
 
@@ -139,18 +141,19 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Personal Loan Acceptance Classification
+                    The Cricket Strike Rate Analysis Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    Fall 2021
+                    Spring 2022
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Feature engineered on household income zipcode using uszipcode </li>
-                    <li>Eliminated one highly correlated feature and some outliers through a well-developed EDA</li>
-                    <li>Obtained 0.96 at macro F1-score by the designed random forest model</li>
+                    <li>Converted files in HDFS to the database using Sqoop for creating analytics tables using Hive </li>
+                    <li>Used Scala to visualize the data and develop analytics reports in Spark</li>
+                    <li>Predicted the strike rate using a linear regression on numerical features,
+                      with MAE as the evaluation metrics of the feature importance</li>
                   </ul>
                 </div>
 
@@ -209,9 +212,10 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Drew database diagrams in MySQL to show the relationship between seller side and buyer side,
-                      including the connection from users-sales-products-reviews</li>
-                    <br></br>
+                    <li>Designed an entity-relationship database and star schema database of the enterprise Fiverr
+                      using MySQL to identify the business rules, entities, and relationships</li>
+                    <li>Implemented two databases on the Oracle Apex</li>
+
                   </ul>
                 </div>
 
@@ -237,8 +241,8 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Built automatic programs via VBA to deal with 10 daily reports and parts of weekly reports,
-                      saving 19% working time. Therefore, I was assigned to help the payroll team in managing payroll issuance every day</li>
+                    <li>Reduced 19% workload due to transforming all manual daily reports via VBA automatic programs</li>
+                    <li>Rotated to the payroll teams at the end of each month for managing payroll issuance</li>
                   </ul>
                 </div>
 
@@ -259,7 +263,8 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Improved productivity by 25% through developing VBA automatic programs connecting to the Access,
-                      generated 5 daily reports and 7 weekly reports. By doing so I had more time to address ad-hoc projects, etc.</li>
+                      produced 5 daily and 7 weekly reports</li>
+                    <li>Fetched the data from the cloud storage of 1010DATA for analytic reporting</li>
 
                   </ul>
                 </div>
@@ -298,7 +303,7 @@
                 <h4 class="item-title">Programming Languages</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">Python / SQL / R / VBA
-                  <li class="mb-2">JavaScript / HTML5</li>
+                  <li class="mb-2">JavaScript / HTML5/ Scala</li>
                 </ul>
               </div>
 
@@ -320,7 +325,7 @@
               <div class="item">
                 <h4 class="item-title">Big Data</h4>
                 <ul class="list-unstyled resume-skills-list">
-                  <li class="mb-2">Hadoop / Spark / Hive / Pig</li>
+                  <li class="mb-2">Hadoop / Spark / Hive</li>
                 </ul>
               </div>
 
@@ -329,7 +334,7 @@
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">scikit-learn / Pandas / spaCy</li>
                   <li class="mb-2">Linux / Beautiful Soup </li>
-                  <li class="mb-2">GitHub/ PyCharm / TensorFlow</li>
+                  <li class="mb-2">git/ PyCharm / TensorFlow</li>
                 </ul>
               </div><!--//item-->
             </section>
@@ -361,7 +366,7 @@
 				<hr>
 				<div class="resume-footer text-center">
 					<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://github.com/Jerrymzl99"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">Jerry Mai</span></a></li>
+					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://github.com/Jerrymzl99"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">Zhelu Mai</span></a></li>
 					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://www.linkedin.com/in/zhelu-jerry-mai/"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">Zhelu Mai</span></a></li>
 				</ul>
 			</div><!--//resume-footer-->
