--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row align-items-center">
           <div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
             <h2 class="resume-name mb-0 text-uppercase">Zhelu Mai</h2>
-            <div class="resume-tagline mb-3 mb-md-0">M.S. Business Analytics Student of the University of North Texas</div>
+            <div class="resume-tagline mb-3 mb-md-0">M.S. Business Analytics Student at the University of North Texas</div>
           </div><!--//resume-title-->
 
           <!-- top right part, four lines of personal information -->
@@ -180,24 +180,6 @@
 
               </div>
 
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Tableau Project
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    Spring 2021
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>Visualize the data by storyline that how the development of the COVID-19 has been reached an unstoppable situation step by step in 2019</li>
-                  </ul>
-                </div>
-
-              </div>
 
               <div class="item mb-3">
 
