--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    AWS Data Warehouses Project
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    Fall 2022
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Utilized python to implement Redshift clusters and IAM role creations locally </li>
+                    <li>Built an ETL Pipeline using  that extracts their data from S3 to a database hosted on Redshift</li>
+                    <li>Execute SQL Statements that create fact and dimension tables from these staging tables to create analytics</li>
+                  </ul>
+                </div>
+
+              </div>
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
                     Stock2Vec Research Project (<a href="assets/images/poster.pdf">Poster</a>)
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
@@ -224,7 +244,7 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Reduced 19% workload due to transforming all manual daily reports via VBA automatic programs</li>
-                    <li>Rotated to the payroll teams at the end of each month for managing payroll issuance</li>
+                    <li>Consolidated and analyzed the insurance data by EDA via Python for business analytics presentation</li>
                   </ul>
                 </div>
 
@@ -244,9 +264,8 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Improved productivity by 25% through developing VBA automatic programs connecting to the Access,
-                      produced 5 daily and 7 weekly reports</li>
-                    <li>Fetched the data from the cloud storage of 1010DATA for analytic reporting</li>
+                    <li>Extracted the data from MySQL for analytic reporting visualization and ad hoc projects in excel</li>
+                    <li>Fetched the data from the cloud storage of 1010DATA for daily reports in excel</li>
 
                   </ul>
                 </div>
