--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           </div>
 
           <div class="col text-start">
-            <p class="mb-0">I am an international student from Hong Kong, pursuing a master's degree
+            <p class="mb-0">I am an international student from Hong Kong, pursued a master's degree
               from <a href="https://cob.unt.edu/ms-buan">G. Brint Ryan College of Business</a>, <a href="https://www.unt.edu/">University of North Texas</a>.
-              As an analyst before, I gained experience in the data analysis field and have a passion for making impacts on real business.
+              As an analyst before, I gained experience in the data analysis field and have a passion for making an impact on real businesses.
               By diving deep into the master program, I have been equipped the proven skills in machine learning, NLP, and database fields.
               Most importantly, I am a life learner who is eager to develop new skills through the challenges at work.
 
